feat: add Global error on QuoteCheck
